FCS-751: New teams pattern (#694)