@@ -5,7 +5,9 @@ import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.co.nstauthority.fieldconsents.application.ApplicationTestUtil.CACHED_PRIMARY_OPERATOR_NAME_1;
@@ -13,26 +15,22 @@ import static uk.co.nstauthority.fieldconsents.email.EmailMergeFieldTestUtil.APP
 import static uk.co.nstauthority.fieldconsents.email.EmailMergeFieldTestUtil.CASE_OFFICER;
 import static uk.co.nstauthority.fieldconsents.email.EmailMergeFieldTestUtil.CASE_OFFICER_EPU;
 import static uk.co.nstauthority.fieldconsents.email.EmailService.RECIPIENT_IDENTIFIER_MERGE_FIELD_NAME;
-import static uk.co.nstauthority.fieldconsents.integrationtest.ApplicationDataItemViewIntegrationTestUtil.ENERGY_PORTAL_USER_DTO;
-import static uk.co.nstauthority.fieldconsents.organisations.OrganisationUnitTestUtil.ORG_GROUP_1;
 import static uk.co.nstauthority.fieldconsents.organisations.OrganisationUnitTestUtil.orgUnit1;
 import static uk.co.nstauthority.fieldconsents.organisations.OrganisationUnitTestUtil.orgUnit4;
-import static uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamRole.CONSENT_RECIPIENT;
-import static uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamRole.CREATOR;
-import static uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamRole.EDITOR;
-import static uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamRole.SUBMITTER;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.co.fivium.digitalnotificationlibrary.core.notification.DomainReference;
 import uk.co.fivium.digitalnotificationlibrary.core.notification.MailMergeField;
@@ -50,89 +48,37 @@ import uk.co.nstauthority.fieldconsents.email.FieldConsentsEmailRecipient;
 import uk.co.nstauthority.fieldconsents.email.FieldConsentsEmailRecipientService;
 import uk.co.nstauthority.fieldconsents.email.GovukNotifyTemplate;
 import uk.co.nstauthority.fieldconsents.energyportal.WebUserAccountId;
+import uk.co.nstauthority.fieldconsents.energyportal.organisationgroup.OrganisationGroupDto;
 import uk.co.nstauthority.fieldconsents.energyportal.user.EnergyPortalUserService;
 import uk.co.nstauthority.fieldconsents.organisations.OrganisationUnitService;
 import uk.co.nstauthority.fieldconsents.organisations.OrganisationUnitWithGroupsJson;
+import uk.co.nstauthority.fieldconsents.teams.Role;
 import uk.co.nstauthority.fieldconsents.teams.Team;
-import uk.co.nstauthority.fieldconsents.teams.TeamMemberView;
-import uk.co.nstauthority.fieldconsents.teams.TeamMemberViewService;
+import uk.co.nstauthority.fieldconsents.teams.TeamMemberViewTestUtil;
+import uk.co.nstauthority.fieldconsents.teams.TeamQueryService;
+import uk.co.nstauthority.fieldconsents.teams.TeamRoleTestUtil;
+import uk.co.nstauthority.fieldconsents.teams.TeamScopeReference;
 import uk.co.nstauthority.fieldconsents.teams.TeamTestUtil;
 import uk.co.nstauthority.fieldconsents.teams.TeamType;
-import uk.co.nstauthority.fieldconsents.teams.TeamView;
-import uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamRole;
-import uk.co.nstauthority.fieldconsents.teams.permissionmanagement.industry.IndustryTeamService;
+import uk.co.nstauthority.fieldconsents.teams.management.view.TeamMemberView;
 
 @ExtendWith(MockitoExtension.class)
 class ConsentEmailServiceTest {
 
-  static final Team INDUSTRY_TEAM_1 = new TeamTestUtil.TeamBuilder()
-      .withId(1)
-      .withTeamType(TeamType.INDUSTRY)
+  private static final Team INDUSTRY_TEAM_1 = TeamTestUtil.newBuilder().withTeamType(TeamType.INDUSTRY).build();
+
+  private static final TeamMemberView TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1 = TeamMemberViewTestUtil.newBuilder()
+      .withTeam(INDUSTRY_TEAM_1)
+      .withRoles(Role.CONSENT_RECIPIENT)
       .build();
 
-  private static final TeamMemberView TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1 = new TeamMemberView(
-      WebUserAccountId.valueOf("10"),
-      new TeamView(INDUSTRY_TEAM_1.toTeamId(), TeamType.INDUSTRY, "Industry team"),
-      "Mr",
-      "Consent1",
-      "Recipient1",
-      "industry.recipient1@email.co.uk",
-      "012345",
-      Set.of(IndustryTeamRole.CONSENT_RECIPIENT)
-  );
-
-  private static final TeamMemberView TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_2 = new TeamMemberView(
-      WebUserAccountId.valueOf("20"),
-      new TeamView(INDUSTRY_TEAM_1.toTeamId(), TeamType.INDUSTRY, "Consent team"),
-      "Mr",
-      "Consent2",
-      "Recipient2",
-      "industry.recipient2@email.co.uk",
-      "06789",
-      Set.of(IndustryTeamRole.CONSENT_RECIPIENT)
-  );
-
-  private static final TeamMemberView TEAM_MEMBER_VIEW_CREATOR = new TeamMemberView(
-      WebUserAccountId.valueOf("30"),
-      new TeamView(INDUSTRY_TEAM_1.toTeamId(), TeamType.INDUSTRY, "Consent team"),
-      "Mr",
-      "Creator",
-      "Creator Surname",
-      "industry.creator@email.co.uk",
-      "23412",
-      Set.of(CREATOR)
-  );
-
-  private static final TeamMemberView TEAM_MEMBER_VIEW_SUBMITTER = new TeamMemberView(
-      WebUserAccountId.valueOf("40"),
-      new TeamView(INDUSTRY_TEAM_1.toTeamId(), TeamType.INDUSTRY, "Consent team"),
-      "Mr",
-      "Submitter",
-      "Submitter Surname",
-      "industry.submitter@email.co.uk",
-      "08923",
-      Set.of(SUBMITTER)
-  );
-
-  private static final TeamMemberView TEAM_MEMBER_VIEW_EDITOR = new TeamMemberView(
-      WebUserAccountId.valueOf("50"),
-      new TeamView(INDUSTRY_TEAM_1.toTeamId(), TeamType.INDUSTRY, "Consent team"),
-      "Mr",
-      "Editor",
-      "Editor Surname",
-      "industry.editor@email.co.uk",
-      "98723",
-      Set.of(EDITOR)
-  );
+  private static final TeamMemberView TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_2 = TeamMemberViewTestUtil.newBuilder()
+      .withTeam(INDUSTRY_TEAM_1)
+      .withRoles(Role.CONSENT_RECIPIENT)
+      .build();
 
   @Mock
   private EmailService emailService;
-
-  @Mock
-  private IndustryTeamService industryTeamService;
-
-  @Mock
-  private TeamMemberViewService teamMemberViewService;
 
   @Mock
   private OrganisationUnitService organisationUnitService;
@@ -146,6 +92,13 @@ class ConsentEmailServiceTest {
   @Mock
   private FieldConsentsEmailRecipientService fieldConsentsEmailRecipientService;
 
+  @Mock
+  private TeamQueryService teamQueryService;
+
+  @Spy
+  @InjectMocks
+  private ConsentEmailService consentEmailService;
+
   @Captor
   private ArgumentCaptor<MergedTemplate> templateCaptor;
 
@@ -155,45 +108,35 @@ class ConsentEmailServiceTest {
   @Captor
   private ArgumentCaptor<DomainReference>  domainReferenceCaptor;
 
-  private ConsentEmailService consentEmailService;
-
   private ApplicationVersion applicationVersion;
 
   @BeforeEach
   void setUp() {
     applicationVersion = ApplicationTestUtil.getSubmittedApplicationVersionWithType(ApplicationType.PRODUCTION);
-    consentEmailService = new ConsentEmailService(
-        emailService,
-        industryTeamService,
-        teamMemberViewService,
-        organisationUnitService,
-        energyPortalUserService,
-        consentFieldEquityPartnerService,
-        fieldConsentsEmailRecipientService
-    );
   }
 
   @Test
-  void sendConsentIssuedEmailToOperator_withNoTeamsFoundWithinTheOrganisationGroup_thenOnlyApplicationSubmitterIsNotified() {
-    var serviceDetailSubmitter = FieldConsentsEmailRecipient.from(ENERGY_PORTAL_USER_DTO);
+  void sendConsentIssuedEmailToOperator_multipleRecipients() {
+    var emailRecipients = Set.of(
+        FieldConsentsEmailRecipient.from(TeamMemberViewTestUtil.newBuilder().build()),
+        FieldConsentsEmailRecipient.from(TeamMemberViewTestUtil.newBuilder().build()),
+        FieldConsentsEmailRecipient.from(TeamMemberViewTestUtil.newBuilder().build())
+    );
 
-    when(organisationUnitService.getOrganisationUnitWithGroupsById(
-        eq(applicationVersion.getPrimaryOperatorOuId()),
-        anyString())
-    ).thenReturn(OrganisationUnitWithGroupsJson.from(orgUnit1));
+    var primaryOperator = OrganisationUnitWithGroupsJson.from(orgUnit1);
 
-    when(energyPortalUserService.getByWuaId(any()))
-        .thenReturn(ENERGY_PORTAL_USER_DTO);
-
-    when(industryTeamService.getTeamByOrganisationGroupId(ORG_GROUP_1.getOrganisationGroupId()))
-        .thenReturn(Optional.empty());
+    when(organisationUnitService.getOrganisationUnitWithGroupsById(eq(applicationVersion.getPrimaryOperatorOuId()), anyString()))
+        .thenReturn(primaryOperator);
 
     when(emailService.getTemplateForApplication(GovukNotifyTemplate.CONSENT_ISSUED_TO_OPERATOR, applicationVersion))
         .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
 
+    doReturn(emailRecipients)
+        .when(consentEmailService).getConsentIssuedEmailRecipientsForOperator(applicationVersion, primaryOperator);
+
     consentEmailService.sendConsentIssuedEmailToOperator(applicationVersion);
 
-    verify(emailService).sendEmail(
+    verify(emailService, times(emailRecipients.size())).sendEmail(
         templateCaptor.capture(),
         emailRecipientCaptor.capture(),
         domainReferenceCaptor.capture()
@@ -205,126 +148,62 @@ class ConsentEmailServiceTest {
             tuple(RECIPIENT_IDENTIFIER_MERGE_FIELD_NAME, CACHED_PRIMARY_OPERATOR_NAME_1)
         );
 
-    assertThat(emailRecipientCaptor.getValue().getEmailAddress())
-        .isEqualTo(serviceDetailSubmitter.getEmailAddress());
+    assertThat(emailRecipientCaptor.getAllValues())
+        .containsExactlyInAnyOrderElementsOf(emailRecipients);
 
-    assertThat(domainReferenceCaptor.getValue().getDomainId())
-        .isEqualTo(applicationVersion.getId().toString());
+    assertThat(domainReferenceCaptor.getAllValues())
+        .map(DomainReference::getDomainId)
+        .allMatch(applicationVersion.getId().toString()::equals);
 
-    assertThat(domainReferenceCaptor.getValue().getDomainType())
-        .isEqualTo(APPLICATION_VERSION_DOMAIN_REFERENCE);
+    assertThat(domainReferenceCaptor.getAllValues())
+        .map(DomainReference::getDomainType)
+        .allMatch(APPLICATION_VERSION_DOMAIN_REFERENCE::equals);
   }
 
   @Test
-  void sendConsentIssuedEmailToOperator_withTeamFoundButNoMemberRolesOtherThanSubmitter_thenOnlyApplicationSubmitterIsNotified() {
-    var serviceDetailSubmitter = FieldConsentsEmailRecipient.from(ENERGY_PORTAL_USER_DTO);
+  void getConsentIssuedEmailRecipientsForOperator() {
+    var primaryOperator = OrganisationUnitWithGroupsJson.from(orgUnit1);
 
-    when(organisationUnitService.getOrganisationUnitWithGroupsById(
-        eq(applicationVersion.getPrimaryOperatorOuId()),
-        anyString())
-    ).thenReturn(OrganisationUnitWithGroupsJson.from(orgUnit1));
+    var teamScopeIds = primaryOperator.organisationGroups()
+        .stream()
+        .map(OrganisationGroupDto::getOrganisationGroupId)
+        .map(String::valueOf)
+        .collect(Collectors.toSet());
 
-    when(energyPortalUserService.getByWuaId(any()))
-        .thenReturn(ENERGY_PORTAL_USER_DTO);
+    var nonSubmitterTeamRoles = List.of(
+        TeamRoleTestUtil.newBuilder().withRole(Role.CONSENT_RECIPIENT).build(),
+        TeamRoleTestUtil.newBuilder().withRole(Role.CREATOR).build(),
+        TeamRoleTestUtil.newBuilder().withRole(Role.SUBMITTER).build(),
+        TeamRoleTestUtil.newBuilder().withRole(Role.EDITOR).build(),
+        TeamRoleTestUtil.newBuilder().withRole(Role.ACCESS_MANAGER).build() // should be ignored
+    );
+    var submitterTeamRole = TeamRoleTestUtil.newBuilder()
+        .withRole(Role.FINANCE_ADMINISTRATOR) // maybe they got a promotion or something. They were a submitter at one point
+        .build();
 
-    when(industryTeamService.getTeamByOrganisationGroupId(ORG_GROUP_1.getOrganisationGroupId()))
-        .thenReturn(Optional.of(INDUSTRY_TEAM_1));
+    var emailRecipientTeamRoles = new HashSet<>(nonSubmitterTeamRoles.subList(0, 4));
+    emailRecipientTeamRoles.add(submitterTeamRole);
 
-    when(emailService.getTemplateForApplication(GovukNotifyTemplate.CONSENT_ISSUED_TO_OPERATOR, applicationVersion))
-        .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
-
-    when(teamMemberViewService
-        .getTeamMemberViewsWithRolesForTeam(INDUSTRY_TEAM_1, Set.of(CONSENT_RECIPIENT, CREATOR, SUBMITTER, EDITOR)))
-        .thenReturn(Collections.emptyList());
-    
-    consentEmailService.sendConsentIssuedEmailToOperator(applicationVersion);
-
-    verify(emailService).sendEmail(
-        templateCaptor.capture(),
-        emailRecipientCaptor.capture(),
-        domainReferenceCaptor.capture()
+    var teamMemberViews = List.of(
+        TeamMemberViewTestUtil.newBuilder().build()
     );
 
-    assertThat(templateCaptor.getValue().getMailMergeFields())
-        .extracting(MailMergeField::name, MailMergeField::value)
-        .containsOnly(
-            tuple(RECIPIENT_IDENTIFIER_MERGE_FIELD_NAME, CACHED_PRIMARY_OPERATOR_NAME_1)
-        );
+    var expectedRecipients = teamMemberViews
+        .stream()
+        .map(FieldConsentsEmailRecipient::from)
+        .collect(Collectors.toSet());
 
-    assertThat(emailRecipientCaptor.getValue().getEmailAddress())
-        .isEqualTo(serviceDetailSubmitter.getEmailAddress());
+    when(teamQueryService.getTeamRoles(TeamType.INDUSTRY, TeamScopeReference.ORGANISATION_GROUP_ID, teamScopeIds))
+        .thenReturn(nonSubmitterTeamRoles);
 
-    assertThat(domainReferenceCaptor.getValue().getDomainId())
-        .isEqualTo(applicationVersion.getId().toString());
+    when(teamQueryService.getTeamRoles(WebUserAccountId.from(applicationVersion.getSubmittedByWuaId())))
+        .thenReturn(List.of(submitterTeamRole));
 
-    assertThat(domainReferenceCaptor.getValue().getDomainType())
-        .isEqualTo(APPLICATION_VERSION_DOMAIN_REFERENCE);
-  }
+    when(teamQueryService.getTeamMemberViews(emailRecipientTeamRoles))
+        .thenReturn(teamMemberViews);
 
-  @Test
-  void sendConsentIssuedEmailToOperator_withTeamFoundAndMultipleMembersInDifferentRoles_thenNotifyAll() {
-    var serviceDetailSubmitter = FieldConsentsEmailRecipient.from(ENERGY_PORTAL_USER_DTO);
-
-    when(organisationUnitService.getOrganisationUnitWithGroupsById(
-        eq(applicationVersion.getPrimaryOperatorOuId()),
-        anyString())
-    ).thenReturn(OrganisationUnitWithGroupsJson.from(orgUnit1));
-
-    when(energyPortalUserService.getByWuaId(any()))
-        .thenReturn(ENERGY_PORTAL_USER_DTO);
-
-    when(industryTeamService.getTeamByOrganisationGroupId(ORG_GROUP_1.getOrganisationGroupId()))
-        .thenReturn(Optional.of(INDUSTRY_TEAM_1));
-
-    when(emailService.getTemplateForApplication(GovukNotifyTemplate.CONSENT_ISSUED_TO_OPERATOR, applicationVersion))
-        .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
-
-    when(teamMemberViewService
-        .getTeamMemberViewsWithRolesForTeam(INDUSTRY_TEAM_1, Set.of(CONSENT_RECIPIENT, CREATOR, SUBMITTER, EDITOR)))
-        .thenReturn(List.of(
-            TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1,
-            TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_2,
-            TEAM_MEMBER_VIEW_CREATOR,
-            TEAM_MEMBER_VIEW_SUBMITTER,
-            TEAM_MEMBER_VIEW_EDITOR));
-
-    consentEmailService.sendConsentIssuedEmailToOperator(applicationVersion);
-
-    verify(emailService, Mockito.times(6)).sendEmail(
-        templateCaptor.capture(),
-        emailRecipientCaptor.capture(),
-        domainReferenceCaptor.capture()
-    );
-
-    // verify emails merge fields
-    var emailTemplates = templateCaptor.getAllValues();
-    var domainReferences = domainReferenceCaptor.getAllValues();
-
-    emailTemplates.forEach(emailTemplate ->
-        assertThat(emailTemplate.getMailMergeFields())
-            .extracting(MailMergeField::name, MailMergeField::value)
-            .containsOnly(
-                tuple(RECIPIENT_IDENTIFIER_MERGE_FIELD_NAME, CACHED_PRIMARY_OPERATOR_NAME_1)));
-
-    // verify email recipients
-    var testEmailRecipients = emailRecipientCaptor.getAllValues();
-
-    assertThat(testEmailRecipients).contains(
-        serviceDetailSubmitter,
-        FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1),
-        FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_2),
-        FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CREATOR),
-        FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_SUBMITTER),
-        FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_EDITOR));
-
-    // verify domain references
-    domainReferences.forEach(domainReference -> {
-      assertThat(domainReference.getDomainId())
-          .isEqualTo(applicationVersion.getId().toString());
-
-      assertThat(domainReference.getDomainType())
-          .isEqualTo(APPLICATION_VERSION_DOMAIN_REFERENCE);
-    });
+    assertThat(consentEmailService.getConsentIssuedEmailRecipientsForOperator(applicationVersion, primaryOperator))
+        .isEqualTo(expectedRecipients);
   }
 
   @Test
@@ -385,7 +264,7 @@ class ConsentEmailServiceTest {
         .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
 
     when(fieldConsentsEmailRecipientService
-        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(IndustryTeamRole.CONSENT_RECIPIENT)))
+        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(Role.CONSENT_RECIPIENT)))
         .thenReturn(Collections.emptySet());
 
     consentEmailService.sendConsentIssuedEmailToFieldEquityPartners(applicationVersion, consent);
@@ -408,7 +287,7 @@ class ConsentEmailServiceTest {
         .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
 
     when(fieldConsentsEmailRecipientService
-        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(IndustryTeamRole.CONSENT_RECIPIENT)))
+        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(Role.CONSENT_RECIPIENT)))
         .thenReturn(Set.of(FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1)));
 
     consentEmailService.sendConsentIssuedEmailToFieldEquityPartners(applicationVersion, consent);
@@ -426,7 +305,7 @@ class ConsentEmailServiceTest {
         );
 
     assertThat(emailRecipientCaptor.getValue().getEmailAddress())
-        .isEqualTo(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1.contactEmail());
+        .isEqualTo(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1.email());
 
     assertThat(domainReferenceCaptor.getValue().getDomainId())
         .isEqualTo(applicationVersion.getId().toString());
@@ -450,7 +329,7 @@ class ConsentEmailServiceTest {
         .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
 
     when(fieldConsentsEmailRecipientService
-        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(IndustryTeamRole.CONSENT_RECIPIENT)))
+        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(Role.CONSENT_RECIPIENT)))
         .thenReturn(Set.of(FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1)));
 
     consentEmailService.sendConsentIssuedEmailToFieldEquityPartners(applicationVersion, consent);
@@ -468,7 +347,7 @@ class ConsentEmailServiceTest {
         );
 
     assertThat(emailRecipientCaptor.getValue().getEmailAddress())
-        .isEqualTo(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1.contactEmail());
+        .isEqualTo(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1.email());
 
     assertThat(domainReferenceCaptor.getValue().getDomainId())
         .isEqualTo(applicationVersion.getId().toString());
@@ -492,14 +371,14 @@ class ConsentEmailServiceTest {
         .thenReturn(MergedTemplate.builder(new Template(null, null, Set.of(), null)));
 
     when(fieldConsentsEmailRecipientService
-        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(IndustryTeamRole.CONSENT_RECIPIENT)))
+        .getDistinctEmailRecipientsWithRoles(organisationUnitJson, Set.of(Role.CONSENT_RECIPIENT)))
         .thenReturn(Set.of(
             FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_1),
             FieldConsentsEmailRecipient.from(TEAM_MEMBER_VIEW_CONSENT_RECIPIENT_2)));
 
     consentEmailService.sendConsentIssuedEmailToFieldEquityPartners(applicationVersion, consent);
 
-    verify(emailService, Mockito.times(2)).sendEmail(
+    verify(emailService, times(2)).sendEmail(
         templateCaptor.capture(),
         emailRecipientCaptor.capture(),
         domainReferenceCaptor.capture()
